@@ -57,6 +57,10 @@ class CstWeeklyHearingListFileConverterTest {
     private static final String CST_LIST_WELSH_NAME = "Rhestr Gwrandawiadau Wythnosol y "
         + "Tribiwnlys Safonau Gofal";
 
+    private static final String HEARING_LENGTH = "1 hour";
+    private static final String TYPE = "mda";
+    private static final String HEARING_VENUE = "This is a venue name";
+
     private static final String HEADER_ELEMENT = "page-heading";
     private static final String LIST_DATE_ELEMENT = "list-date";
     private static final String LAST_UPDATED_DATE_ELEMENT = "last-updated-date";
@@ -71,6 +75,7 @@ class CstWeeklyHearingListFileConverterTest {
     private static final String IMPORTANT_INFORMATION_MESSAGE = "Important information heading does not match";
     private static final String BODY_MESSAGE = "Body does not match";
     private static final String TABLE_HEADERS_MESSAGE = "Table headers does not match";
+    private static final String TABLE_CONTENT_MESSAGE = "Table content does not match";
 
     private final NonStrategicListFileConverter converter = new NonStrategicListFileConverter();
 
@@ -125,7 +130,7 @@ class CstWeeklyHearingListFileConverterTest {
             .as(LAST_UPDATED_DATE_MESSAGE)
             .isEqualTo("Last updated 20 January 2025 at 9:30am");
 
-        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).get(0).text())
+        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).getFirst().text())
             .as(IMPORTANT_INFORMATION_MESSAGE)
             .isEqualTo("Important information");
 
@@ -149,6 +154,25 @@ class CstWeeklyHearingListFileConverterTest {
                 HEARING_TYPE,
                 VENUE,
                 ADDITIONAL_INFORMATION
+            );
+
+        softly.assertThat(document.getElementsByTag("td"))
+            .as(TABLE_CONTENT_MESSAGE)
+            .hasSize(12)
+            .extracting(Element::text)
+            .containsExactly(
+                "10 December 2024",
+                "This is a case name",
+                HEARING_LENGTH,
+                TYPE,
+                HEARING_VENUE,
+                "This is additional information",
+                "11 December 2024",
+                "This is another case name",
+                HEARING_LENGTH,
+                TYPE,
+                HEARING_VENUE,
+                "This is another additional information"
             );
 
         softly.assertAll();
@@ -193,7 +217,7 @@ class CstWeeklyHearingListFileConverterTest {
             .as(LAST_UPDATED_DATE_MESSAGE)
             .isEqualTo("Diweddarwyd ddiwethaf 20 January 2025 am 9:30am");
 
-        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).get(0).text())
+        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).getFirst().text())
             .as(IMPORTANT_INFORMATION_MESSAGE)
             .isEqualTo("Gwybodaeth bwysig");
 
@@ -217,6 +241,25 @@ class CstWeeklyHearingListFileConverterTest {
                 HEARING_TYPE_WELSH,
                 VENUE_WELSH,
                 ADDITIONAL_INFORMATION_WELSH
+            );
+
+        softly.assertThat(document.getElementsByTag("td"))
+            .as(TABLE_CONTENT_MESSAGE)
+            .hasSize(12)
+            .extracting(Element::text)
+            .containsExactly(
+                "10 December 2024",
+                "This is a case name",
+                HEARING_LENGTH,
+                TYPE,
+                HEARING_VENUE,
+                "This is additional information",
+                "11 December 2024",
+                "This is another case name",
+                HEARING_LENGTH,
+                TYPE,
+                HEARING_VENUE,
+                "This is another additional information"
             );
 
         softly.assertAll();
